libs/preprocessor/tests/errors/pe28_unexpected_else/source.hpp
#define SOMETHING
systemChat "B";
#else
